--- a/pProjetJEE/WebContent/admin.xhtml
+++ b/pProjetJEE/WebContent/admin.xhtml
@@ -4,16 +4,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	xmlns:c="http://java.sun.com/jsp/jstl/core">
 
 <ui:composition template="master.xhtml">
-
-<ui:define name="Title">Hello World!</ui:define>
-
-<ui:define name="Content">
-	Bonjour tout le monde!
-</ui:define>
+	
 
 </ui:composition>
-
 </html>
